Bug 123067 - Assertion failure when exporting templates from template manager
Summary: Assertion failure when exporting templates from template manager
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.3.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Julien Nabet
URL:
Whiteboard: target:6.3.0
Keywords: haveBacktrace
Depends on:
Blocks: Crash-Assert
  Show dependency treegraph
 
Reported: 2019-01-30 18:12 UTC by Aron Budea
Modified: 2020-11-16 15:28 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Backtrace (38.01 KB, text/plain)
2019-01-30 18:12 UTC, Aron Budea
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Aron Budea 2019-01-30 18:12:23 UTC
Created attachment 148772 [details]
Backtrace

Only occurs with debug builds.

- Start Writer / Impress.
- Open File -> Templates -> Manage Templates.
- Choose a template, and click Export.
- Choose a directory, and click OK.

=> Crash with the following assertion.

soffice.bin: /build/sources/libreoffice/sal/rtl/strtmpl.cxx:1378: void rtl_uString_newFromSubString(rtl_uString**, const rtl_uString*, sal_Int32, sal_Int32): Assertion `false' failed.

Note that it only crashes if no file with such name exists in the directory, so on subsequent attempts delete the previous one.

Observed using LO 6.3.0.0.alpha0+ (fdc91f7493171ae600ecb293ad380df5fa77a277) / Ubuntu 18.04.
Comment 1 Durgapriyanka 2019-01-31 17:10:15 UTC
Cannot reproduce in 
Version: 6.1.3.2
Build ID: 86daf60bf00efa86ad547e59e09d6bb77c699acb
CPU threads: 2; OS: Windows 6.1; UI render: default; 
Locale: en-US (en_US); Calc: group threaded

and in

Version: 6.3.0.0.alpha0+
Build ID: b6b28931435e44aca92b8c0e1659f701e3ed1a87
CPU threads: 2; OS: Windows 6.1; UI render: default; VCL: win; 
TinderBox: Win-x86@42, Branch:master, Time: 2019-01-30_06:57:04
Locale: en-US (en_US); UI-Language: en-US
Calc: threaded
Comment 2 Aron Budea 2019-01-31 17:44:38 UTC
Thanks for checking, please note that a debug build is needed to test assetion failures, regular release or daily builds don't include such checks.
Comment 3 Julien Nabet 2019-02-02 14:28:42 UTC
On pc Debian x86-64 with master sources updated today, I could reproduce this.
Comment 4 Julien Nabet 2019-02-02 14:29:17 UTC
Patch on gerrit here:
https://gerrit.libreoffice.org/#/c/67285/
Comment 5 Commit Notification 2019-02-02 21:20:23 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/045c5bb758c263585d96b6ff361cf80e51a2f77a%5E%21

tdf#123067: fix assert when exporting template

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Julien Nabet 2019-02-02 21:23:58 UTC
I don't have any crash with LO Debian package 6.1.5 RC1 so no need to backport on 6.1

About 6.2, don't know.
Comment 7 Kate Merry 2020-11-16 12:54:14 UTC Comment hidden (spam)
Comment 8 Aron Budea 2020-11-16 15:28:18 UTC
A bit late verification from me, but thanks for fixing, Julien!

Setting status to CLOSED against spammers.