tdf#123067: fix assert when exporting template

See bt here:
https://bugs.documentfoundation.org/attachment.cgi?id=148772

Change-Id: I7bd6a7dcb7cf7677b92abe79abb781105dfb6019